--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/ic_app_logo_background"
     tools:context=".ui.main.MainFragment">
 
     <include layout="@layout/video_background"
@@ -14,7 +15,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <androidx.appcompat.widget.SearchView
+    <ProgressBar
+        android:id="@+id/loading_screen"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:progressTint="@color/design_default_color_secondary_variant"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/simple_search_view"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <!-- It would be so much better with this element -->
+    <!--<androidx.appcompat.widget.SearchView
         android:id="@+id/simpleSearchView"
         android:layout_width="0dp"
         android:layout_height="@dimen/search_view_size"
@@ -23,7 +36,21 @@
         app:layout_constraintEnd_toEndOf="@id/back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        /> -->
+
+    <EditText
+        android:id="@+id/simple_search_view"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/search_view_size"
+        android:background="@color/ic_app_logo_background"
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:hint="@string/search_placeholder"
+        android:imeOptions="actionSearch"
+        android:lines="1"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@id/back_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/back_button"
@@ -35,17 +62,17 @@
         android:gravity="center_vertical|end"
         style="@android:style/TextAppearance.DeviceDefault.Medium"
         app:layout_constraintEnd_toEndOf="parent"
-        android:paddingEnd="@android:dimen/app_icon_size"
-        android:paddingRight="@android:dimen/app_icon_size"
-        app:layout_constraintTop_toTopOf="@id/simpleSearchView"
-        app:layout_constraintBottom_toBottomOf="@id/simpleSearchView" />
+        android:paddingEnd="@dimen/search_bar_edge_ignore"
+        android:paddingRight="@dimen/search_bar_edge_ignore"
+        app:layout_constraintTop_toTopOf="@id/simple_search_view"
+        app:layout_constraintBottom_toBottomOf="@id/simple_search_view" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/search_group"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:constraint_referenced_ids="simpleSearchView,back_button" />
+        app:constraint_referenced_ids="simple_search_view,back_button" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_action"
