Final touches done

--- a/app/src/main/res/layout/fragment_definition_expandable_item.xml
+++ b/app/src/main/res/layout/fragment_definition_expandable_item.xml
@@ -41,6 +41,7 @@
             android:id="@+id/iv_right_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:src="@{definitionExpandable.expanded ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
             android:alpha="@{definitionExpandable.expanded ? ConverterExtension.convertStringToFloat(@string/reflex_angle) : ConverterExtension.convertStringToFloat(@string/right_angle) }"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/definition_expandable_title"
@@ -50,7 +51,7 @@
             android:id="@+id/definition_expanded_title"
             android:layout_width="0dp"
             android:visibility="@{definitionExpandable.expanded ? View.VISIBLE : View.GONE }"
-            android:text="@{definitionExpandable.exampleText}"
+            android:text="@{@string/definition_example + definitionExpandable.exampleText}"
             android:layout_marginTop="@dimen/margin_padding_10"
             android:alpha="@dimen/disabled_alpha"
             android:layout_marginEnd="@dimen/margin_padding_18"
@@ -61,6 +62,60 @@
             app:layout_constraintTop_toBottomOf="@+id/definition_expandable_title"
             tools:text="Definition Item">
         </TextView>
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/bottom_barrier"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="definition_expandable_title,definition_expanded_title"
+            />
+
+        <ImageView
+            android:id="@+id/up_vote"
+            android:layout_marginTop="@dimen/margin_padding_10"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_up"
+            app:tint="@color/design_default_color_primary_dark"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_barrier" />
+
+        <TextView
+            android:id="@+id/up_vote_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/up_vote"
+            app:layout_constraintBottom_toBottomOf="@id/up_vote"
+            app:layout_constraintStart_toEndOf="@id/up_vote"
+            android:text="@{ConverterExtension.convertIntToString(definitionExpandable.upVote)}"
+            android:layout_marginLeft="@dimen/margin_padding_10"
+            android:layout_marginStart="@dimen/margin_padding_10"
+            android:textColor="@android:color/holo_blue_dark"/>
+
+        <ImageView
+            android:id="@+id/down_vote"
+            android:layout_marginTop="@dimen/margin_padding_10"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_down"
+            app:tint="@android:color/holo_red_dark"
+            android:layout_marginLeft="@dimen/margin_padding_24"
+            android:layout_marginStart="@dimen/margin_padding_24"
+            app:layout_constraintStart_toEndOf="@id/up_vote_value"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_barrier" />
+
+        <TextView
+            android:id="@+id/down_vote_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/up_vote"
+            app:layout_constraintBottom_toBottomOf="@id/up_vote"
+            app:layout_constraintStart_toEndOf="@id/down_vote"
+            android:text="@{ConverterExtension.convertIntToString(definitionExpandable.downVote)}"
+            android:layout_marginLeft="@dimen/margin_padding_10"
+            android:layout_marginStart="@dimen/margin_padding_10"
+            android:textColor="@android:color/holo_red_dark"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
