--- a/app/src/main/res/layout/fragment_definition_header_item.xml
+++ b/app/src/main/res/layout/fragment_definition_header_item.xml
@@ -26,6 +26,7 @@
             android:alpha="@dimen/disabled_alpha"
             android:text="@{definitionHeader.title}"
             android:layout_height="wrap_content"
+            android:textColor="@color/design_default_color_primary_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
